--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-PORT=5000
-MONGO_URI=mongodb+srv://bipasa123:bipasa123@cluster0.ru2e9jc.mongodb.net/
+PORT=8000
+MONGO_URI=mongodb+srv://roybips2005:bipasa123@cluster1.hqusna6.mongodb.net
+
+
+ACCESS_TOKEN_SECRET=HWGDY876R445%^&_++HUYW2UYU2K1U6&i^@!%%rfsjfjsJMLhJJSASUYDKJHABKZB
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=UYDYWYODHOAUU^&ghghgkhhsGGSKDGKAXB
+REFRESH_TOKEN_EXPIRY=10d
