--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ ACCESS_TOKEN_SECRET=HWGDY876R445%^&_++HUYW2UYU2K1U6&i^@!%%rfsjfjsJMLhJJSASUYDKJH
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=UYDYWYODHOAUU^&ghghgkhhsGGSKDGKAXB
 REFRESH_TOKEN_EXPIRY=10d
-JWT_SECRET="secretsecret"
+JWT_SECRET=dssbbsm
